# cam_port_manager

./: CMakeLists.txt  package.xml
config/: AUV7_config.yaml  AUV8_config.yaml
drivers/arm64/: install_spinnaker.sh
drivers/x86/: install_spinnaker.sh
include/cam_port_manager/: Camera.hpp  CaptureNode.hpp
launch/: launch.py
src/: Camera.cpp  CaptureNode.cpp  main.cpp
